🐛 fix: post content overflow problem

--- a/static/css/markdown.css
+++ b/static/css/markdown.css
@@ -60,7 +60,7 @@
 
   #content pre {
     @apply bg-codebox !important;
-    @apply block my-3 p-5 rounded-md whitespace-pre-wrap;
+    @apply block my-3 p-5 rounded-md whitespace-pre-wrap overflow-scroll;
   }
   #content code,
   #content code * {
